fix offcenter section

--- a/src/components/Welcome/Welcome.scss
+++ b/src/components/Welcome/Welcome.scss
@@ -255,7 +255,7 @@ section.Welcome {
       width: 50vw;
 
       h1 {
-        width: 85%;
+        width: 90%;
         font-size: 2.2em;
         line-height: 1.75em;
       }
@@ -265,7 +265,6 @@ section.Welcome {
         margin-top: -1vh;
 
         div.left-content {
-          width: 60vw;
           height: 40vh;
 
           h2 {
@@ -298,7 +297,7 @@ section.Welcome {
           object-position: 40% 0;
   
           height: 50vh;
-          width: 20vw;
+          width: 25vw;
         }
       }
     }
